--- a/mal.yml
+++ b/mal.yml
@@ -2,4 +2,4 @@ metadataId: 041f1e6e-bdbc-4091-b48f-8a5990f3cc5b
 output_directory: produktspesifikasjon
 product_slug: admenheter
 updated: 2025-01-01
-ogc_feature_api: https://kos-pygeoapi.atkv3-dev.kartverket.cloud/collections
+xmi_url: https://sosi.geonorge.no/svn/SOSI/SOSI Del 3/Statens kartverk/N50Kartdata20230401.xml
