Exclude schema.yml files from find command

--- a/.github/workflows/generate-productspesification.yml
+++ b/.github/workflows/generate-productspesification.yml
@@ -26,7 +26,7 @@ jobs:
           if [ -n "$input" ]; then
             paths=("$input")
           else
-            mapfile -t paths < <(find . -maxdepth 1 -type f -name '*.yml' -printf '%P\n' | sort)
+            mapfile -t paths < <(find . -maxdepth 1 -type f -name '*.yml' ! -name '*.schema.yml' -printf '%P\n' | sort)
           fi
 
           if [ "${#paths[@]}" -eq 0 ]; then
@@ -73,12 +73,58 @@ jobs:
               raise SystemExit(f"Config file not found: {config_path}") from exc
 
           values = {}
+          scopes = []
+          in_scopes = False
+          scopes_indent = None
+          current_scope = None
           for raw in lines:
-              line = raw.split("#", 1)[0].strip()
-              if not line or ":" not in line:
+              line_no_comment = raw.split("#", 1)[0].rstrip("\n")
+              if not line_no_comment.strip():
                   continue
-              key, value = line.split(":", 1)
+              if line_no_comment.strip().startswith("scopes:"):
+                  in_scopes = True
+                  scopes_indent = None
+                  current_scope = None
+                  continue
+              if in_scopes:
+                  raw_line = line_no_comment
+                  indent = len(raw_line) - len(raw_line.lstrip(" "))
+                  if scopes_indent is None and raw_line.lstrip(" ").startswith("- "):
+                      scopes_indent = indent
+                  if scopes_indent is not None and indent < scopes_indent:
+                      # End of scopes list.
+                      if current_scope:
+                          scopes.append(current_scope)
+                          current_scope = None
+                      in_scopes = False
+                  if not in_scopes:
+                      continue
+                  content = raw_line.lstrip(" ")
+                  if content.startswith("- "):
+                      if current_scope:
+                          scopes.append(current_scope)
+                      current_scope = {}
+                      content = content[2:]
+                      if ":" in content:
+                          key, value = content.split(":", 1)
+                          key = key.strip()
+                          value = value.strip().strip("'").strip('"')
+                          if key:
+                              current_scope[key] = value
+                  elif ":" in content and current_scope is not None:
+                      key, value = content.split(":", 1)
+                      key = key.strip()
+                      value = value.strip().strip("'").strip('"')
+                      if key:
+                          current_scope[key] = value
+                  continue
+              if ":" not in line_no_comment:
+                  continue
+              key, value = line_no_comment.strip().split(":", 1)
               values[key.strip()] = value.strip().strip("'").strip('"')
+
+          if in_scopes and current_scope:
+              scopes.append(current_scope)
 
           required_map = {
               "metadataId": "metadata-id",
@@ -110,6 +156,9 @@ jobs:
                   value = values.get(source)
                   if value:
                       gh_out.write(f"{dest}={value}\n")
+              if scopes:
+                  import json
+                  gh_out.write("scopes=" + json.dumps(scopes) + "\n")
           PY
 
       - id: prepare
@@ -119,21 +168,28 @@ jobs:
           ogc-feature-api: ${{ steps.config.outputs.ogc-feature-api }}
           output-directory: ${{ steps.config.outputs.output-directory }}
           product-slug: ${{ steps.config.outputs.product-slug }}
+          scopes: ${{ steps.config.outputs.scopes }}
           updated: ${{ steps.config.outputs.updated }}
           xmi-model: ${{ steps.config.outputs.xmi-model }}
       
       - name: Render UML to PNG
-        if: steps.prepare.outputs.feature-catalogue-uml != '' || steps.prepare.outputs.xmi-feature-catalogue-uml != ''
         run: |
           sudo apt-get update
           sudo apt-get install -y plantuml graphviz
           set -euo pipefail
-          files=()
-          if [ -n "${{ steps.prepare.outputs.feature-catalogue-uml }}" ]; then
-            files+=("${{ steps.prepare.outputs.feature-catalogue-uml }}")
+          root="${{ steps.config.outputs.output-directory }}"
+          if [ -z "$root" ]; then
+            echo "No output directory set; skipping PlantUML render."
+            exit 0
           fi
-          if [ -n "${{ steps.prepare.outputs.xmi-feature-catalogue-uml }}" ]; then
-            files+=("${{ steps.prepare.outputs.xmi-feature-catalogue-uml }}")
+          if [ ! -d "$root" ]; then
+            echo "Output directory not found: $root"
+            exit 0
+          fi
+          mapfile -t files < <(find "$root" -type f -name '*.puml' | sort)
+          if [ "${#files[@]}" -eq 0 ]; then
+            echo "No .puml files found under $root"
+            exit 0
           fi
           for file in "${files[@]}"; do
             if [ "${file:0:1}" != "/" ]; then
